2011-08-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/network.c: Update due to API changes.

2011-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove references to non-existing files.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, startup/bspstart.c: Use standard cache BSP options.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/cpuinit.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac: Added GEN83XX_ENABLE_INTERRUPT_NESTING BSP option.
	* irq/irq.c: Use GEN83XX_ENABLE_INTERRUPT_NESTING option.  Disable
	interrupts to protect critical section.
	* make/custom/gen83xx.inc: Enable strict aliasing.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, console/console-config.c, i2c/i2c_init.c,
	include/bsp.h, include/hwreg_vals.h, include/irq.h, include/tm27.h,
	include/tsec-config.h, irq/irq.c, network/network.c, spi/spi_init.c,
	startup/bspstart.c: Address some of the issues spotted by the
	check_bsp script.

2011-01-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/network.c: Typo.

2011-01-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/network.c: Moved initializations from generic TSEC driver
	part.

2010-12-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/u-boot.h: Removed file.
	* include/u-boot-config.h, include/tsec-config.h: New files.
	* include/bsp.h, start/start.S, startup/bspstart.c: Use new U-Boot
	support.
	* network/network.c: Update for API changes.
	* Makefile.am, preinstall.am: Reflect changes above.

2010-11-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console/console.h, console/console.c, console/config.c,
	console/ns16550cfg.c: Removed files.