@@ -32,6 +32,7 @@ project_lib_DATA += rtems_crti.$(OBJEXT)
 
 dist_project_lib_DATA += startup/linkcmds \
     startup/linkcmds.base \
+    startup/linkcmds.mpc8309som \
     startup/linkcmds.mpc8313erdb \
     startup/linkcmds.mpc8349eamds \
     startup/linkcmds.hsc_cm01
