@@ -21,38 +21,44 @@ RTEMS_BSPOPTS_HELP_DATA_CACHE_ENABLED
 RTEMS_BSPOPTS_SET_INSTRUCTION_CACHE_ENABLED([*],[1])
 RTEMS_BSPOPTS_HELP_INSTRUCTION_CACHE_ENABLED
 
-RTEMS_BSPOPTS_SET([MPC8313ERDB],[mpc8313erdb],[1])
-RTEMS_BSPOPTS_HELP([MPC8313ERDB],
-[If defined, use custom settings for the mpc8313erdb BSP.])
+RTEMS_BSPOPTS_SET([MPC83XX_BOARD_MPC8313ERDB],[mpc8313erdb],[1])
+RTEMS_BSPOPTS_HELP([MPC83XX_BOARD_MPC8313ERDB],
+[if defined, then use settings for the MPC8313ERDB board])
 
-RTEMS_BSPOPTS_SET([MPC8349EAMDS],[mpc8349eamds],[1])
-RTEMS_BSPOPTS_HELP([MPC8349EAMDS],
-[If defined, use custom settings for the mpc8349eamds BSP.])
+RTEMS_BSPOPTS_SET([MPC83XX_BOARD_MPC8349EAMDS],[mpc8349eamds],[1])
+RTEMS_BSPOPTS_HELP([MPC83XX_BOARD_MPC8349EAMDS],
+[if defined, then use settings for the MPC8349EAMDS board])
 
-RTEMS_BSPOPTS_SET([HSC_CM01],[hsc_cm01],[1])
-RTEMS_BSPOPTS_HELP([HSC_CM01],
-[If defined, use custom settings for the hsc_cm01 BSP.])
+RTEMS_BSPOPTS_SET([MPC83XX_BOARD_HSC_CM01],[hsc_cm01],[1])
+RTEMS_BSPOPTS_HELP([MPC83XX_BOARD_HSC_CM01],
+[if defined, then use settings for the HSC_CM01 board])
 
-RTEMS_BSPOPTS_SET([MPC8349],[mpc8313erdb],[1])
-RTEMS_BSPOPTS_SET([MPC8349],[mpc8349eamds],[1])
-RTEMS_BSPOPTS_SET([MPC8349],[hsc_cm01],[1])
-RTEMS_BSPOPTS_HELP([MPC8349],
-[If defined, use custom settings for the MPC8349 libcpu family.])
+RTEMS_BSPOPTS_SET([MPC83XX_BOARD_MPC8309SOM],[mpc8309som],[1])
+RTEMS_BSPOPTS_HELP([MPC83XX_BOARD_MPC8309SOM],
+[if defined, then use settings for the MPC8309SOM board])
 
-RTEMS_BSPOPTS_SET([BSP_CONSOLE_BAUD],[mpc8313erdb],[115200])
-RTEMS_BSPOPTS_SET([BSP_CONSOLE_BAUD],[*],[9600])
-RTEMS_BSPOPTS_HELP([BSP_CONSOLE_BAUD],[Default baud for console and other serial devices.])
+RTEMS_BSPOPTS_SET([MPC83XX_CHIP_TYPE],[mpc8309som],[8309])
+RTEMS_BSPOPTS_SET([MPC83XX_CHIP_TYPE],[mpc8349eamds],[8349])
+RTEMS_BSPOPTS_SET([MPC83XX_CHIP_TYPE],[hsc_cm01],[8349])
+RTEMS_BSPOPTS_SET([MPC83XX_CHIP_TYPE],[*],[8313])
+RTEMS_BSPOPTS_HELP([MPC83XX_CHIP_TYPE],[chip type of the MPC83XX family])
 
-RTEMS_BSPOPTS_SET([BSP_USE_UART_INTERRUPTS],[mpc8313erdb],[1])
+RTEMS_BSPOPTS_SET([BSP_CONSOLE_BAUD],[mpc8349eamds],[9600])
+RTEMS_BSPOPTS_SET([BSP_CONSOLE_BAUD],[hsc_cm01],[9600])
+RTEMS_BSPOPTS_SET([BSP_CONSOLE_BAUD],[*],[115200])
+RTEMS_BSPOPTS_HELP([BSP_CONSOLE_BAUD],[default baud for console and other serial devices])
+
+RTEMS_BSPOPTS_SET([BSP_USE_UART_INTERRUPTS],[mpc8349eamds],[])
+RTEMS_BSPOPTS_SET([BSP_USE_UART_INTERRUPTS],[hsc_cm01],[])
+RTEMS_BSPOPTS_SET([BSP_USE_UART_INTERRUPTS],[*],[1])
 RTEMS_BSPOPTS_HELP([BSP_USE_UART_INTERRUPTS],[enable usage of interrupts for the UART modules])
 
-RTEMS_BSPOPTS_SET([BSP_USE_UART2],[mpc8313erdb],[1])
-RTEMS_BSPOPTS_SET([BSP_USE_UART2],[mpc8349eamds],[1])
-RTEMS_BSPOPTS_SET([BSP_USE_UART2],[hsc_cm01],[1])
-RTEMS_BSPOPTS_HELP([BSP_USE_UART2],[If defined, enables UART2.])
+RTEMS_BSPOPTS_SET([BSP_USE_UART2],[*],[1])
+RTEMS_BSPOPTS_HELP([BSP_USE_UART2],[if defined, enables UART2])
 
+RTEMS_BSPOPTS_SET([HAS_UBOOT],[mpc8309som],[1])
 RTEMS_BSPOPTS_SET([HAS_UBOOT],[mpc8313erdb],[1])
-RTEMS_BSPOPTS_HELP([HAS_UBOOT],[If defined, enables U-Boot support.])
+RTEMS_BSPOPTS_HELP([HAS_UBOOT],[if defined, enables U-Boot support])
 
 RTEMS_BSPOPTS_SET([GEN83XX_ENABLE_INTERRUPT_NESTING],[*],[1])
 RTEMS_BSPOPTS_HELP([GEN83XX_ENABLE_INTERRUPT_NESTING],[enable interrupt nesting])
@@ -65,6 +71,7 @@ AC_CONFIG_FILES([Makefile])
 
 RTEMS_BSP_BOOTCARD_OPTIONS
 RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
+RTEMS_BSP_LINKCMDS
 
 RTEMS_PPC_EXCEPTIONS
 
