@@ -4,7 +4,7 @@
 #
 # @ingroup mpc83xx_config
 #
-# @brief Configuration file for the MPC8313E Reference Design Board.
+# @brief Configuration file for the MPC8309 System on Module.
 #
 
 include $(RTEMS_ROOT)/make/custom/gen83xx.inc
