@@ -9,6 +9,4 @@
 #  parameters differ.
 #  
 
-RTEMS_LINKCMDS=linkcmds.mpc8349eamds
-
 include $(RTEMS_ROOT)/make/custom/gen83xx.inc
